@@ -42,27 +42,39 @@ h1 {
 
 <p>Before you go on, you may would like to set the "Name of coder" in Settings Tab, so you can learn who is resposible for the following actions (file import, coding etc.). You can replace "default" with your name and then click OK button.
 
-<p><b>2. Import files</b>
+<p><b>2. Files</b>
 <p> After open a project, you can import files by click import button in the Files Tab. By default, the file should be a plain text with encoding of ASCII, otherwise, you should set the File encoding in Settings Tab before you import files.
 
 <p> If you want to import a lots of files, you can use R function write.FileList() to import them. For more information about its usage, please consult to ?write.FileList. 
 
 <p> You can delete files. First select one file you want to delete, then click delete button in Files Tab. Similarly, you can rename the selected file name (one file per time). You can select a file, and click open button to open the file, so you can read the content of it. You can open a file by double click as well.
 
+<p>You can show only a subset of files by the popup menu. For example, you can show the uncoded files only, or the coded files only. After that, if you want to show all the files again, you can click "show all sorted by imported time". You can also show subset of files fitting the search criterion by popup menu "Search files ...". More about the setting of search-criterion, you can refer to help page by <i>?SearchFiles</i>.
+
+<p>You can sort the files by file names as well. See tip 3 for more.
+
 <p> You can calculate the total number of files in a project by using R command <i>length(GetFileId())</i>, the total number of uncoded file by command <i>length(GetFileId(type="uncoded"))</i>, and number of coded file by command <i>length(GetFileId(type="coded"))</i>.
 
-<p><b>3. Coding </b>
+<p><b>3. Codes </b>
 <p>Basically, the essence of QDA is to apply a label to a text segment. The label is usually a meaningful concept in the research, which is called <b>"code"</b> here. So you have to generate a code list. You can add a code to the list by clicking add button in Codes Tab, input a code in the input window, and click OK. You can add unlimited number of codes, but you should think hard on what codes are useful in the research so to avoid overwhelming of codes. You can rename and delete a code from the code list. The operation is similar to that of files.
 
 <p>When you have imported a list of files and generate a code list, then you can go on the process of coding. First, you should open a file. Then you read and think, if you think some words is relevant to a code, you can apply that code to the text segment: select a code, select that text segment, and click mark button in the Codes Tab. Then you can find that text segment is highlighted with color (by default, it is blue). We call this process <b>"coding"</b>. You can undo the coding as well: select the same text segment and click Unmark button in the Codes Tab. Now, the highlight is remove, which means that you have succesfully remove that coding. 
 
 <p>If you want to see what information has been attached to a code, you can  double click a code to retrieval all the related coding to that code. This process is called <b>"coding retrieval"</b>. Of course, you can select a code, and then click retrieval button to conduct similar operation. The latter method has an advantage that you can go back to the original file content by clicking the back button within the retrieved coding (though this method takes a bit more time to retrieve the coding). This method can give you a closeness with the original content and avoid, to some extent, segmentation due to coding. To get a overall statistics of coding, you can use R function SummaryCoding() to inspect the "Number of codings for each code", "Average number of words assciated with each code", "Number of files associated with each code". You can get more by GetCodingTable and GetFileId function. For more information, please refer to the help page by <i>?GetCodingTable</i> and <i>?GetFileId</i>.
 
+<p> When the file is open, all the codings are highlighted (You can click "HL ALL" button to achieve the same effect). If you  select a highlighted coding, and click "C2Info" button, a window called "associated code-list" pops up, it shows what codes the selected coding is attached to. By double-clicking a code in the "associated code-list" window, you can retrieve all the codings of that code.
 
 <p><b>4. Writing memo</b>
 <p> Writing what you think during reading and coding is an integral part of QDA. This is called "<b>Memo writing</b>", and what you write is "<b>Memo</b>". RQDA offers different kinds of memos. For ideas apply to the whole project, you should write a project memo (project memo button in Project Tab). You can write memo about a specific file by clicking F-Memo button in Files Tab, or by cliking "File Memo" via popup memu in Files Tab. In the Codes Tab, there are two kinds of memo, the "C-memo" button is used to attach memo to a selected code. You can select a code then click "C-memo" button to view/add memo. "C2Memo" is used to attach a memo to a coding (a coded text segments). In the open file, you can see the coded segments (highlighted), select one segment, and click "C2Memo" button, you can view/add memo to that coded-segment.
 
-<p><b>5. Settings</b>
+<p><b>5. F-cat</b>
+<p> F-Cat stands for file category, it helps to organize your files. For example, when I analyze newspaper reports, I would like to classify the files accoding to the sources (what newspaper does a file come from), so I add the name of newspapers as categories. You can click "add" button in F-CAT Tab to do this. Then you want to add files to a specific category, you select that category first, then click "AddTo" button, a file list pops up, select files belonging to this categroy and click "OK".  If you want to delete files from a category, select a category first, then files of this category will show in the "Files.of.This.Categroy", select files you want to drop from this category, then cilck "DropFrom" button.
+
+<p>The other way to add files to category: in Files Tab, select files you want to add to a category, then click "Add to file category ..." in popup menu of Files Tab, then a file category list pops up, select one category and click "OK".
+
+<p>Of course, you can rename the file category and delete them. Delete file category will not affect the original files. If you want to delete original files, you should go to Files Tab to delete files.
+
+<p><b>6. Settings</b>
 <p> "Name of coder" is the name of the analyst. this is crucial if there are more than one analysts, and crucial for calculate the inter-coder reliability coeficient. You should always set this parameter. 
 <p>Encoding of file is the encoding of the file you want to imported. If it is ASCII file, the default "unknown" is fine. If it is other encoding, you should set it accordingly. For example, you should set it to UTF-8 if the file is in UTF-8. Note that if you save a plain text with encoding UTF-8 with using MS notepad, the notepad will add BOM (Byte order Mark, it is a 3 bite mark) in the beginning of the file, for this case, you should set BOM to TRUE.
 <p> To change the setting is simple, you change the value of each setting and then click OK button. If you want to reset to the default setting, you can just click the default button.
