@@ -38,6 +38,7 @@ h1 {
 <li>Single-file (*.rqda) format, which is basically SQLite database. Data are stored in UTF-8, so it should be portable
 <li>Facilitator helps to categorize codes,which is key to theory building. I deliberately avoid using tree-like categorization
 <li>Facilitator helps to categorize files
+<li>Search files by keywords
 <li>There is a case category, which is crucial feature to bridge qualitative and quantitative research
 <li>Search information about selected case from the Internet vis popup menu
 <li>Temporary delete files and codes
@@ -47,7 +48,7 @@ h1 {
 <li>Manipulate the temporary deletion (list, undo temporary deletion and permanently erase them)
 <li>Import a batch of files
 <li>Calculate the relation between two codings, given the coding indexs
-
+<li>Gives a summary of coding and inter-code relationship
 
 <p>You can use <i>help(package="RQDA")</i> to see more functions in the RQDA package. 
 
